external-crates/move/crates/move-compiler/tests/move_2024/verification/spec_only_do_not_filter_invariant_without_import.move
// do not filter spec-only functions if there is no #spec_only use in the file
// this is to prevent non-verification code from being filtered out

module a::m {    
    public fun foo() {
        invariant!(something);
    }
}
